# Stabil

./: README.md
src/: README.md
src/objects/: CMakeLists.txt  package.xml  rosObjectHolder.msg
src/objects/scripts/: objDetect.py
src/pid/launch/: stabil.launch
src/pid/src/: setpoint_node.cpp
src/rtimulib_ros/config/: RTIMULib.ini
src/rtimulib_ros/launch/: mod.launch  rtimulib_ros.launch
src/rtimulib_ros/src/: rtimulib_ros.cpp
src/stabil/: CMakeLists.txt  old_CMakeLists.txt  old_package.xml  package.xml
src/stabil/include/stabil/: codegen.h  control_listener.h  geometry_params.h  servo.h
src/stabil/msg/: QuadFloat.msg  rosObject.msg
src/stabil/scripts/: add_two_ints_client.py  add_two_ints_server.py  listener.py  servo_client.py  talker.py
src/stabil/src/: JHPWMPCA9685.cpp  MyServo.cpp  MyServo.h  codegen.cpp  control_listener.cpp  control_structures.cpp  control_structures.h  jetsonGPIO.cpp  jetsonGPIO.h  limbPose.cpp  listener.cpp  matlab_service.cpp  network_server.cpp  pca9685_server.cpp  proj_parms.h  servo.cpp  servo.h  servo_client.cpp  talker.cpp  teleop_bot.cpp
src/stabil/src/matlab_codegen/: buildInfo.mat  limbPose.h  rtGetInf.c  rtGetInf.cpp  rtGetInf.h  rtGetNaN.c  rtGetNaN.cpp  rtGetNaN.h  rt_defines.h  rt_nonfinite.c  rt_nonfinite.cpp  rt_nonfinite.h  rtw_proj.tmw  rtwtypes.h  simpleLegAngle.cpp  simpleLegAngle.h  simpleLegAngle_initialize.cpp  simpleLegAngle_initialize.h  simpleLegAngle_rtw.rsp  simpleLegAngle_terminate.cpp  simpleLegAngle_terminate.h  simpleLegAngle_types.h  tiltBalance.cpp  tiltBalance.h  tiltBalance_types.h
src/stabil/srv/: AttitudeControl.srv  IMUEffort.srv  PCA9685.srv  ServoServer.srv
src/wheel_controller/Project Codes/EncoderPID_w_RPM_Code/: EncoderPID_w_RPM_Code.ino
src/wheel_controller/Project Codes/i2c_code/: i2c_code.ino
src/wheel_controller/Project Codes/i2c_code_slave/: i2c_code_slave.ino
src/wheel_controller/Project Codes/i2c_code_slave_2/: i2c_code_slave_2.ino
src/wheel_controller/Project Codes/i2c_code_slave_3/: i2c_code_slave_3.ino
src/wheel_controller/Project Codes/i2c_code_slave_4/: i2c_code_slave_4.ino
src/wheel_controller/Reference Codes/PID_Position/: PID_Position.ino
src/wheel_controller/Reference Codes/PID_Speed/: PID_Speed.ino
src/wheel_controller/Reference Codes/PWM_hbridge_DC/: PWM_hbridge_DC.ino
src/wheel_controller/Reference Codes/PWM_hbridge_DC_test_1/: PWM_hbridge_DC_test_1.ino
src/wheel_controller/Reference Codes/PWM_hbridge_DC_test_2/: PWM_hbridge_DC_test_2.ino
